--- a/style.css
+++ b/style.css
@@ -5,56 +5,136 @@
 
 body {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 300px 1fr;
+    grid-template-rows: 150px 1fr;
     height: 100vh;
 }
 
 .navigation-section {
     background-color: rgb(147, 192, 177);
+    grid-row: 1 / 3;
     padding: 20px;
-    display: grid;
-    grid-template-rows: 1fr 5fr 5fr;
 }
 
-.main-section {
-    background-color: rgb(163, 228, 207);
+.navigation-section > .wrapper {
     display: grid;
-    grid-template-rows: 1fr 3fr 3fr;
-    grid-template-columns: 3fr 1fr;
+    gap: 50px;
 }
+
+/*  HEADER */
 
 .header-section {
     grid-row: 1;
-    grid-column: 1 / 3;
-    background-color: blanchedalmond;
+    grid-column: 2;
+    background-color: rgb(199, 136, 136);
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.top {
+    grid-row: 1;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    
+}
+
+.top-right {
+    justify-self: end;
+    display: grid;
+    grid-template-columns: auto auto 1fr;
+    justify-items: end;
+    align-items: center;
+}
+
+.bell {
+    height: 20px;
+    width: 20px;
+    background-color: yellow;
+}
+
+.profile-pic {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: blue;
+}
+
+.bottom {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+.bottom-left {
+    display: grid;
+    grid-template-columns: 2;
+    align-items: center;
+}
+
+.greeting {
+    grid-column: 2;
+}
+
+.bottom-right {
+    justify-self: end;
+    align-self: center;
+}
+
+
+/* MAIN */
+
+.main-section {
+    grid-row: 2;
+    grid-column: 2;
+    background-color: rgb(92, 92, 92);
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 300px;
 }
 
 .projects-section {
-    grid-row: 2 / 4;
+    grid-row: 1 / 3;
     grid-column: 1;
-    background-color: rgb(199, 172, 135);
+    margin: 20px;
+    background-color: violet;
+
+    /* display: flex;
+    flex-direction: column; */
 }
 
 .projects {
-    padding: 20px;
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-auto-rows: 250px;
+    background-color: rgb(201, 105, 201);
+    height: auto;
+    /* flex: 1; */
+
 }
 
 .project {
-    height: 200px;
-    background-color: rgb(178, 204, 178);
+    background-color: rgb(255, 255, 255);
 }
 
 .announcements-section {
-    grid-row: 2;
-    grid-column: 2;
-    background-color: rgb(185, 137, 119);
+    grid-area: 1 / 2;
+    margin: 20px;
+}
+
+.announcements-section > .wrapper {
+    background-color: rgb(255, 255, 255);
+    height: 300px;
 }
 
 .trending-section {
-    grid-row: 3;
-    grid-column: 2;
-    background-color: rgb(151, 199, 141);
+    grid-area: 2 / 2;
+    margin: 20px;
+}
+
+.trending-section > .wrapper {
+    background-color: rgb(255, 255, 255);
+    height: 300px;
 }
