--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
+:root {
+    --primary: #0ea5e9;
+    --highlight: #facc15;
+    --secondary: #cbd5e1;
+    --white: #fafafa;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,10 +16,12 @@ body {
     grid-template-columns: 300px 1fr;
     grid-template-rows: 150px 1fr;
     height: 100vh;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .navigation-section {
-    background-color: rgb(147, 192, 177);
+    background-color: var(--primary);
+    color: var(--white);
     grid-row: 1 / 3;
     padding: 20px;
 }
@@ -19,6 +29,30 @@ body {
 .navigation-section > .wrapper {
     display: grid;
     gap: 50px;
+}
+
+.logo {
+    font-size: 1rem;
+    font-weight: 800;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo > span {
+    font-size: 3em;
+}
+
+
+.nav-item {
+    font-size: 1.2rem;
+    font-weight: 700;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 20px;
+    align-items: center;
+    padding: 10px;
 }
 
 /*  HEADER */
