--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --highlight: #facc15;
     --secondary: #cbd5e1;
     --white: #fafafa;
+    --black: #0f172a;
 }
 
 * {
@@ -14,10 +15,12 @@
 body {
     display: grid;
     grid-template-columns: 300px 1fr;
-    grid-template-rows: 150px 1fr;
+    grid-template-rows: auto 1fr;
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
 }
+
+/* NAVIGATION SECTION */
 
 .navigation-section {
     background-color: var(--primary);
@@ -60,10 +63,15 @@ body {
 .header-section {
     grid-row: 1;
     grid-column: 2;
-    background-color: rgb(199, 136, 136);
+    background-color: var(--white);
+    color: var(--black);
 
     display: grid;
     grid-template-rows: 1fr 1fr;
+    padding: 20px 50px;
+    gap: 20px;
+    
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 20px;
 }
 
 .top {
@@ -75,25 +83,37 @@ body {
     
 }
 
+.search {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 20px;
+}
+
+.search input {
+    border-style: none;
+    background-color: var(--secondary);
+    height: 25px;
+    padding: 5px 15px;
+    border-radius: 25px;
+}
+
 .top-right {
     justify-self: end;
     display: grid;
     grid-template-columns: auto auto 1fr;
     justify-items: end;
     align-items: center;
-}
-
-.bell {
-    height: 20px;
-    width: 20px;
-    background-color: yellow;
+    font-size: 1.2rem;
+    font-weight: 700;
+    gap: 30px;
 }
 
 .profile-pic {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
-    background-color: blue;
+    background-color: var(--primary);
 }
 
 .bottom {
@@ -105,6 +125,14 @@ body {
     display: grid;
     grid-template-columns: 2;
     align-items: center;
+    gap: 20px;
+}
+
+.bottom-left .profile-pic {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: blue;
 }
 
 .greeting {
@@ -114,6 +142,20 @@ body {
 .bottom-right {
     justify-self: end;
     align-self: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.bottom-right button {
+    background-color: var(--primary);
+    color: var(--white);
+    border-style: none;
+    font-size: 1rem;
+    font-weight: 700;
+    width: 100px;
+    height: 40px;
+    border-radius: 50px;
 }
 
 
