--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
 :root {
     --primary: #0ea5e9;
-    --highlight: #facc15;
-    --secondary: #cbd5e1;
+    --highlight: #facc14;
+    --secondary: #e2e8f0;
     --white: #fafafa;
     --black: #0f172a;
+    --text: #64748b;
 }
 
 * {
@@ -27,6 +28,7 @@ body {
     color: var(--white);
     grid-row: 1 / 3;
     padding: 20px;
+    z-index: 1;
 }
 
 .navigation-section > .wrapper {
@@ -71,7 +73,7 @@ body {
     padding: 20px 50px;
     gap: 20px;
     
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.493) 0px -5px 20px;
 }
 
 .top {
@@ -132,7 +134,7 @@ body {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    background-color: blue;
+    background-color: var(--primary);
 }
 
 .greeting {
@@ -162,22 +164,26 @@ body {
 /* MAIN */
 
 .main-section {
+    background-color: var(--secondary);
     grid-row: 2;
     grid-column: 2;
-    background-color: rgb(92, 92, 92);
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 300px;
+    z-index: -1;
 }
+
+/* PROJECT SECTION */
 
 .projects-section {
     grid-row: 1 / 3;
     grid-column: 1;
     margin: 20px;
-    background-color: violet;
+}
 
-    /* display: flex;
-    flex-direction: column; */
+.projects-section h2 {
+    font-weight: 500;
+    margin-bottom: 15px;
 }
 
 .projects {
@@ -185,14 +191,33 @@ body {
     gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-auto-rows: 250px;
-    background-color: rgb(201, 105, 201);
     height: auto;
-    /* flex: 1; */
-
 }
 
 .project {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--white);
+    box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    padding: 20px;
+    border-radius: 10px;
+    border-left: 8px solid var(--highlight);
+}
+
+.project h2 {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+}
+
+.project p {
+    color: var(--text);
+}
+
+.project > .icons {
+    justify-self: end;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
 }
 
 .announcements-section {
@@ -200,9 +225,15 @@ body {
     margin: 20px;
 }
 
+.announcements-section h2 {
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
 .announcements-section > .wrapper {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--white);
     height: 300px;
+    box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
 }
 
 .trending-section {
@@ -210,7 +241,13 @@ body {
     margin: 20px;
 }
 
+.trending-section h2 {
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
 .trending-section > .wrapper {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--white);
     height: 300px;
+    box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
 }
