--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     grid-template-rows: auto 1fr;
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
+    color: var(--black);
 }
 
 /* NAVIGATION SECTION */
@@ -168,8 +169,8 @@ body {
     grid-row: 2;
     grid-column: 2;
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 300px;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 400px;
     z-index: -1;
 }
 
@@ -232,8 +233,25 @@ body {
 
 .announcements-section > .wrapper {
     background-color: var(--white);
-    height: 300px;
     box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
+    padding: 15px;
+}
+
+.announcement {
+    padding: 15px;
+}
+
+hr {
+    margin: auto 15px;
+}
+
+.announcement h3 {
+    font-size: 1rem;
+}
+
+.announcement p {
+    font-size: 0.9rem;
+    color: var(--text);
 }
 
 .trending-section {
@@ -248,6 +266,32 @@ body {
 
 .trending-section > .wrapper {
     background-color: var(--white);
-    height: 300px;
     box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
+    padding: 20px;
+    display: grid;
+    align-items: center;
+    grid-auto-rows: 1fr;
+    gap: 10px;
 }
+
+.trending-account {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    column-gap: 15px;
+}
+
+.trending-account > .profile-pic {
+    grid-row: 1 / 3;
+}
+
+.trending-account > .name {
+
+}
+
+.trending-account > p {
+    font-size: 0.9rem;
+    color: var(--text);
+}
+
