--- a/style.css
+++ b/style.css
@@ -113,10 +113,16 @@ body {
 }
 
 .profile-pic {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     background-color: var(--primary);
+}
+
+.profile-pic img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
 
 .bottom {
@@ -132,8 +138,8 @@ body {
 }
 
 .bottom-left .profile-pic {
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
     background-color: var(--primary);
 }
@@ -191,7 +197,7 @@ body {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-auto-rows: 250px;
+    grid-auto-rows: 220px;
     height: auto;
 }
 
