--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 body {
     display: grid;
     grid-template-columns: 300px 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto 1fr auto;
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
     color: var(--black);
@@ -29,7 +29,6 @@ body {
     background-color: var(--primary);
     color: var(--white);
     grid-row: 1 / 3;
-    padding: 20px;
     z-index: 1;
 }
 
@@ -45,6 +44,8 @@ body {
     grid-template-columns: auto 1fr;
     align-items: center;
     gap: 10px;
+    user-select: none;
+    padding: 20px;
 }
 
 .logo > span {
@@ -61,6 +62,8 @@ body {
     align-items: center;
     padding: 10px;
     cursor: pointer;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .nav-item:hover{
@@ -87,7 +90,8 @@ body {
     grid-row: 1;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto;
+    gap: 70px;
     align-content: center;
     
 }
@@ -105,6 +109,13 @@ body {
     height: 25px;
     padding: 5px 15px;
     border-radius: 25px;
+    font-size: 1rem;
+}
+
+input:focus {
+    outline: none;
+    border: 2px solid var(--primary);
+    box-shadow: rgba(0, 0, 0, 0.205) 2px 2px 4px;
 }
 
 .top-right {
@@ -253,6 +264,7 @@ button:hover {
     background-color: var(--white);
     box-shadow: rgba(0, 0, 0, 0.253) 2px 5px 7px;
     padding: 15px;
+    border-radius: 10px;
 }
 
 .announcement {
@@ -275,6 +287,7 @@ hr {
 .trending-section {
     grid-area: 2 / 2;
     margin: 20px;
+    margin-bottom: 50px;
 }
 
 .trending-section h2 {
@@ -290,6 +303,7 @@ hr {
     align-items: center;
     grid-auto-rows: 1fr;
     gap: 10px;
+    border-radius: 10px;
 }
 
 .trending-account {
@@ -311,5 +325,14 @@ hr {
 .trending-account > p {
     font-size: 0.9rem;
     color: var(--text);
+}
+
+.footer {
+    background-color: var(--black);
+    grid-column: 1 / 3;
+    color: var(--white);
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
 }
 
